syntax = "proto3";

package currency;

option go_package = "currency_service/proto;currency_v1";

service CurrencyService {
  rpc GetExchangeRate(ExchangeRateRequest) returns (ExchangeRateResponse) {}
  rpc Exchange(ExchangeRequest) returns (ExchangeResponse) {}
}

message ExchangeRateRequest {
  string base_currency = 1;
  string target_currency = 2;
}


message ExchangeRateResponse {
  string currency_name = 1;
  double rate = 2;
  string timestamp = 3;
}

message ExchangeRequest {
  string base_currency = 1;
  string target_currency = 2;
  double amount =  3;
}

message ExchangeResponse {
  string currency = 1;
  double amount = 2;
  string timestamp = 3;
}
